Remove backend entity code
