# backend/typescript/swagger.yml
@@ -30,228 +30,6 @@ components:
           type: string
 
 paths:
-  /entities:
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - Entity
-      description: Returns a list of entities
-      responses:
-        "200":
-          description: Successfully returned a list of entities
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  required:
-                    - intField, stringField, boolField, enumField, stringArrayField
-                  properties:
-                    intField:
-                      type: integer
-                    stringField:
-                      type: string
-                    stringArrayField:
-                      type: array
-                      items:
-                        type: string
-                    enumField:
-                      type: string
-                      enum: ["A", "B", "C", "D"]
-                    boolField:
-                      type: boolean
-                    fileName:
-                      type: string
-        "401":
-          description: Unauthorized
-        "500":
-          description: Invalid request
-
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - Entity
-      description: Create a new entity
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                body:
-                  type: string
-                file:
-                  type: string
-                  format: binary
-      responses:
-        "201":
-          description: Successfully created a new entity
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - intField, stringField, boolField, enumField, stringArrayField
-                properties:
-                  intField:
-                    type: integer
-                  stringField:
-                    type: string
-                  stringArrayField:
-                    type: array
-                    items:
-                      type: string
-                  enumField:
-                    type: string
-                    enum: ["A", "B", "C", "D"]
-                  boolField:
-                    type: boolean
-                  fileName:
-                    type: string
-        "401":
-          description: Unauthorized
-        "500":
-          description: Invalid request
-
-  /entities/{id}:
-    get:
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            # type: integer (postgres)
-            # minimum: 1
-            type: string
-          description: The entity ID
-      tags:
-        - Entity
-      description: Returns an entity based on its ID
-      responses:
-        "200":
-          description: Successfully returns entity based on ID
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - intField, stringField, boolField, enumField, stringArrayField
-                properties:
-                  intField:
-                    type: integer
-                  stringField:
-                    type: string
-                  stringArrayField:
-                    type: array
-                    items:
-                      type: string
-                  enumField:
-                    type: string
-                    enum: ["A", "B", "C", "D"]
-                  boolField:
-                    type: boolean
-                  fileName:
-                    type: string
-        "401":
-          description: Unauthorized
-        "500":
-          description: Invalid ID
-
-    put:
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            # type: integer (postgres)
-            # minimum: 1
-            type: string
-          description: The entity ID
-      tags:
-        - Entity
-      description: Edit an entity based on its ID
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                body:
-                  type: string
-                file:
-                  type: string
-                  format: binary
-      responses:
-        "200":
-          description: Successfully edited entity based on ID
-        "401":
-          description: Unauthorized
-        "500":
-          description: Invalid request
-
-    delete:
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            # type: integer (postgres)
-            # minimum: 1
-            type: string
-          description: The entity ID
-      tags:
-        - Entity
-      description: Delete an entity based on its ID
-      responses:
-        "200":
-          description: Successfully deleted entity based on ID
-        "401":
-          description: Unauthorized
-        "500":
-          description: Invalid ID
-
-  /entities/files/{fileName}:
-    get:
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: fileName
-          required: true
-          schema:
-            type: string
-          description: The name of the file (UUID) associated with an entity
-      tags:
-        - Entity
-      description: Returns a signed URL to the file associated with an entity
-      responses:
-        "200":
-          description: Successfully returns the signed URL of the file
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - fileURL
-                properties:
-                  fileURL:
-                    type: string
-        "401":
-          description: Unauthorized
-        "500":
-          description: Invalid fileName
-
   /auth/login:
     post:
       tags:
